--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
-<!DOCTYPE html>
+<!DOCTYPE>
 <html>
+<head>
+<title> @M3u World (ꜱᴀɪ ꜱʀɪɴɪᴠᴀꜱ)</title>
+  <link rel="icon" href="https://graph.org/file/56499d4a2648bd030fd79.jpg" type="image/x-icon">
 </head>
-<body>
-<p>You will be redirected to the example website in 1 seconds.</p>
-<script>
-window.location.href = "https://t.me/allinonereborn";
-</script>
+
+  <script>// Get a random number between 0 and 1
+    const randomNum = Math.random();
+
+    // Define your two URLs
+    const url1 = "https://whatsapp.com/channel/0029VaKU54rHQbRyiU8vGt0C";
+    const url2 = "https://t.me/M3uWorld";
+
+    // Determine which URL to redirect based on the random number
+    if (randomNum < 0.2) {
+      window.location.href = url1;
+    } else {
+      window.location.href = url2;
+    }
+
+  </script>
+</head>
 </html>
+#EXTINF:-2 tvg-id="" group-title="𝗝𝗢𝗜𝗡 𝗢𝗨𝗥 𝗧𝗘𝗟𝗘𝗚𝗥𝗔𝗠" tvg-logo="https://graph.org/file/56499d4a2648bd030fd79.jpg" ,https://t.me/M3uWorld
+https://t.me/M3uWorld
+#EXTM3U × Sai Srinivas
 <noscript>
 <p>This page requires JavaScript to function properly.</p>
 </noscript>
@@ -6673,9 +6691,6 @@ https://rftv.wtf/tp/jp.mpd?contentID=144
 #KODIPROP:inputstream.adaptive.license_key=https://rftv.wtf/tp/jp.php?contentID=143&key
 #EXTINF:-1 tvg-id=ts143 tvg-logo="https://jiotv.catchup.cdn.jio.com/dare_images/images/CNBC_Tv18_Prime_HD.png" group-title="JioTV+",CNBC Tv18 Prime HD
 https://rftv.wtf/tp/jp.mpd?contentID=143
-
-#EXTINF:-1 tvg-id="" group-title="𝗝𝗢𝗜𝗡 𝗢𝗨𝗥 𝗧𝗘𝗟𝗘𝗚𝗥𝗔𝗠" tvg-logo="https://i.ibb.co/RYsYthb/Screenshot-2024-01-08-172016.png" ,t.me/allinonereborn
-https://t.me/allinonereborn
 
 
 <script disable-devtool-auto="" src="https://cdn.jsdelivr.net/npm/disable-devtool@latest"></script>
